# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import gamesRouter from "./games";
+import promotionsRouter from "./promotions";
+import winnersRouter from "./winners";
+import statsRouter from "./stats";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/games", gamesRouter);
+router.use("/promotions", promotionsRouter);
+router.use("/winners", winnersRouter);
+router.use("/stats", statsRouter);
 
 export default router;
